[package]
name = "server"
version = "0.1.0"
authors = ["Luiz Carlos Mourão Paes de Carvalho <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bridge_core = { path = "../bridge_core/" }

anyhow = "1.0.41"
config = "0.11.0"
dirs = "3.0.2"
env_logger = "0.8.4"
futures = "0.3.15"
log = "0.4.14"
once_cell = "1.8.0"
pem = "0.8.3"
ring = { version = "0.16.20", features = ["std"] }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["net", "rt-multi-thread"] }
tokio-util = "0.6.7"
